@@ -2100,9 +2100,9 @@ static void ImGuiTestEngineHook_ItemAdd_GatherTask(ImGuiContext* ui_ctx, ImGuiTe
         item->NavLayer = window->DC.NavLayerCurrent;
         item->Depth = result_depth;
 #if IMGUI_VERSION_NUM >= 19135
-        item->InFlags = item_data ? item_data->ItemFlags : ImGuiItemFlags_None;
+        item->ItemFlags = item_data ? item_data->ItemFlags : ImGuiItemFlags_None;
 #else
-        item->InFlags = item_data ? item_data->InFlags : ImGuiItemFlags_None;
+        item->ItemFlags = item_data ? item_data->InFlags : ImGuiItemFlags_None;
 #endif
         item->StatusFlags = item_data ? item_data->StatusFlags : ImGuiItemStatusFlags_None;
         task->LastItemInfo = item;
@@ -2133,9 +2133,9 @@ void ImGuiTestEngineHook_ItemAdd(ImGuiContext* ui_ctx, ImGuiID id, const ImRect&
         item->NavLayer = window->DC.NavLayerCurrent;
         item->Depth = 0;
 #if IMGUI_VERSION_NUM >= 19135
-        item->InFlags = item_data ? item_data->ItemFlags : ImGuiItemFlags_None;
+        item->ItemFlags = item_data ? item_data->ItemFlags : ImGuiItemFlags_None;
 #else
-        item->InFlags = item_data ? item_data->InFlags : ImGuiItemFlags_None;
+        item->ItemFlags = item_data ? item_data->InFlags : ImGuiItemFlags_None;
 #endif
         item->StatusFlags = item_data ? item_data->StatusFlags : ImGuiItemStatusFlags_None;
     }
